--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "Daniel",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "joi": "^17.4.0",
     "lorem-ipsum": "^2.0.3",
     "method-override": "^3.0.0",
