--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Daniel",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
