--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Daniel",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
