--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "portfolio project",
   "main": "app.js",
   "scripts": {
-    "start": "app.js",
+    "start": "node app.js",
     "test": "jest"
   },
   "keywords": [
