--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,2 @@
-PORT=3000
-MONGO_URI = mongodb+srv://dandeusz:dandeusz@cluster0.3t3pj.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+PORT=4000
+MONGO_URL = mongodb+srv://dandeusz:dandeusz@cluster0.3t3pj.mongodb.net/Portfolio?retryWrites=true&w=majority
