--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "joi": "^17.4.0",
     "lorem-ipsum": "^2.0.3",
     "method-override": "^3.0.0",
-    "mongoose": "^5.11.15",
+    "mongoose": ">=5.13.20",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
