--- a/package.json
+++ b/package.json
@@ -13,28 +13,27 @@
   "author": "Daniel",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.3",
-    "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.5",
-    "dotenv": "^10.0.0",
-    "ejs": "^3.1.6",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "joi": "^17.4.0",
-    "lorem-ipsum": "^2.0.3",
+    "express-session": "^1.17.3",
+    "joi": "^17.9.2",
+    "lorem-ipsum": "^2.0.8",
     "method-override": "^3.0.0",
-    "mongoose": ">=5.13.20",
+    "mongoose": "^7.4.0",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0",
+    "passport-local-mongoose": "^8.0.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "jest": "^27.0.6",
-    "tar": ">=6.1.9"
+    "jest": "^29.6.1",
+    "tar": "^6.1.15"
   }
 }
