--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
@@ -25,6 +26,7 @@
     "joi": "^17.9.2",
     "lorem-ipsum": "^2.0.8",
     "method-override": "^3.0.0",
+    "mongodb": ">=5.8.0",
     "mongoose": "^7.4.0",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
