--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongodb": ">=5.8.0",
     "mongoose": "^7.4.0",
     "morgan": "^1.10.0",
+    "npm": "^10.2.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
